[package]
name = "ed2k"
version = "1.0.1"
edition = "2021"
description = "An implementation of the ED2K hash function"
repository = "https://github.com/Kimundi/ed2k"
license = "MIT OR Apache-2.0"
keywords = ["hash", "ed2k", "digest", "algorithm"]
categories = ["algorithms", "cryptography"]

[dependencies]
digest = "0.10"
md4 = "0.10"
